# chse-telegram-booking

./: Cargo.toml
html/: error.html  invalid.html  success.html
src/: main.rs  model.rs
src/discord/: events.rs  mod.rs
src/lib/: utils.rs
src/telegram/: mod.rs  schema.rs  types.rs
src/telegram/states/: cancel.rs  confirmation.rs  get_name.rs  mod.rs  night_selection.rs  phone_number.rs  recieve_messages.rs  start.rs  zone.rs
src/verifier/: mod.rs
